All repo tests pass, starting work on services